// Vitest Snapshot v1

exports[`Generator > should emit css 1`] = `
[
  {
    "content": ".Button {
  display: flex;
  position: relative;
  width: fit-content;
  height: fit-content;
  background: #3b82f6;
  border-radius: 4px 4px 4px 4px;
  overflow: hidden;
  gap: 6px;
  padding: 6px 12px 6px 12px;
  align-items: center;
  justify-content: center;
}
.Button__Button {
  display: flex;
  position: relative;
  width: fit-content;
  height: fit-content;
  font-family: Inter, sans-serif;
  font-size: 12px;
  font-weight: 500;
  color: #ffffff;
  text-align: left;
  flex-direction: column;
}
.Button__chevron {
  display: flex;
  position: relative;
  width: 8px;
  height: 8px;
  align-items: flex-start;
}
.Button__arrow_forward_ios {
  display: flex;
  position: absolute;
  left: 2.0833332538604736px;
  top: 0.6666666865348816px;
  width: 3.924999952316284px;
  height: 6.666666507720947px;
}
",
    "filePath": "Button.css",
  },
  {
    "content": "import \\"./Button.css\\";

export function Button(props) {
  return (
    <div {...props} className={\\"Button \\" + props.className}>
      <div className=\\"Button__Button\\">{props.text}</div>
      {props.showChevron && (
        <div className=\\"Button__chevron\\">
          <svg
            width={5}
            height={7}
            viewBox={\\"0 0 5 7\\"}
            fill={\\"none\\"}
            className=\\"Button__arrow_forward_ios\\"
          >
            <path
              d=\\"M0.674995 6.83334L0.0833282 6.24167L2.825 3.5L0.0833282 0.758338L0.674995 0.166672L4.00833 3.5L0.674995 6.83334Z\\"
              fill=\\"white\\"
            />
          </svg>
        </div>
      )}
    </div>
  );
}
",
    "filePath": "Button.js",
  },
  {
    "content": ".Form2 {
  display: flex;
  position: relative;
  width: fit-content;
  height: fit-content;
  background: #ffffff;
  overflow: hidden;
  flex-direction: column;
  gap: 13px;
  padding: 16px 16px 16px 16px;
  align-items: flex-start;
}
.Form2__h1_____ {
  display: flex;
  position: relative;
  width: fit-content;
  height: fit-content;
  font-family: Inter, sans-serif;
  font-size: 12px;
  font-weight: 400;
  color: #000000;
  text-align: left;
  flex-direction: column;
}
.Form2__Button {
  align-self: stretch;
  width: auto;
}
",
    "filePath": "Form2.css",
  },
  {
    "content": "import { Button } from \\"./Button.js\\";
import \\"./Form2.css\\";

export function Form2(props) {
  return (
    <div {...props} className={\\"Form2 \\" + props.className}>
      <div className=\\"Form2__h1_____\\">Some Form (stretch)</div>
      <Button showChevron={false} text={\\"OK\\"} className=\\"Form2__Button\\" />
    </div>
  );
}
",
    "filePath": "Form2.js",
  },
  {
    "content": ".Form {
  display: flex;
  position: relative;
  width: fit-content;
  height: fit-content;
  background: #ffffff;
  overflow: hidden;
  flex-direction: column;
  gap: 13px;
  padding: 16px 16px 16px 16px;
  align-items: flex-start;
}
.Form__h1_____ {
  display: flex;
  position: relative;
  width: fit-content;
  height: fit-content;
  font-family: Inter, sans-serif;
  font-size: 12px;
  font-weight: 400;
  color: #000000;
  text-align: left;
  flex-direction: column;
}
.Form__Button {
}
",
    "filePath": "Form.css",
  },
  {
    "content": "import { Button } from \\"./Button.js\\";
import \\"./Form.css\\";

export function Form(props) {
  return (
    <div {...props} className={\\"Form \\" + props.className}>
      <div className=\\"Form__h1_____\\">Some Form</div>
      <Button showChevron={true} text={\\"OK\\"} className=\\"Form__Button\\" />
    </div>
  );
}
",
    "filePath": "Form.js",
  },
  {
    "content": ".Oldmain {
  display: flex;
  position: relative;
  width: 353px;
  height: 205px;
  background: #ffffff;
  overflow: hidden;
  flex-direction: column;
  gap: 12px;
  padding: 16px 16px 16px 16px;
  align-items: flex-start;
}
.Oldmain__Hello__UIMix_ {
  display: flex;
  position: relative;
  width: fit-content;
  height: fit-content;
  font-family: Inter, sans-serif;
  font-size: 16px;
  font-weight: 700;
  line-height: 24px;
  color: #000000;
  text-align: left;
  flex-direction: column;
}
.Oldmain__Lorem_ipsum_dolor_sit_amet__consectetur_adipiscing_elit__sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ {
  display: flex;
  position: relative;
  align-self: stretch;
  height: fit-content;
  font-family: Inter, sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 24px;
  color: #000000;
  text-align: left;
  flex-direction: column;
}
.Oldmain__Button {
  align-self: stretch;
  width: auto;
}
",
    "filePath": "Oldmain.css",
  },
  {
    "content": "import { Button } from \\"./Button.js\\";
import \\"./Oldmain.css\\";

export function Oldmain(props) {
  return (
    <div {...props} className={\\"Oldmain \\" + props.className}>
      <div className=\\"Oldmain__Hello__UIMix_\\">Hello, UIMix!</div>
      <div className=\\"Oldmain__Lorem_ipsum_dolor_sit_amet__consectetur_adipiscing_elit__sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_\\">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
        tempor incididunt ut labore et dolore magna aliqua.
      </div>
      <Button showChevron={false} text={\\"OK\\"} className=\\"Oldmain__Button\\" />
    </div>
  );
}
",
    "filePath": "Oldmain.js",
  },
  {
    "content": ".Main {
  display: flex;
  position: relative;
  width: 480px;
  height: fit-content;
  background: #ffffff;
  overflow: hidden;
  flex-direction: column;
  align-items: flex-start;
}
.Main__Header {
  display: flex;
  position: relative;
  flex-grow: 0;
  align-self: stretch;
  width: auto;
  height: fit-content;
}
.Main__Frame_1 {
  display: flex;
  position: relative;
  align-self: stretch;
  height: fit-content;
  flex-direction: column;
  gap: 24px;
  padding: 24px 24px 24px 24px;
  align-items: flex-start;
}
.Main__Hello__UIMix_ {
  display: flex;
  position: relative;
  align-self: stretch;
  height: fit-content;
  font-family: Inter, sans-serif;
  font-size: 16px;
  font-weight: 700;
  line-height: 24px;
  color: #000000;
  text-align: left;
  flex-direction: column;
}
.Main__Lorem_ipsum_dolor_sit_amet__consectetur_adipiscing_elit__sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ {
  display: flex;
  position: relative;
  align-self: stretch;
  height: fit-content;
  font-family: Inter, sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 24px;
  color: #000000;
  text-align: left;
  flex-direction: column;
}
.Main__Frame_2 {
  display: flex;
  position: relative;
  width: fit-content;
  height: fit-content;
  gap: 12px;
  align-items: flex-start;
}
.Main__material_symbols_architecture {
  display: flex;
  position: relative;
  width: 24px;
  height: 24px;
}
.Main__material_symbols_avg_time_outline_rounded {
  display: flex;
  position: relative;
  width: 24px;
  height: 24px;
}
.Main__material_symbols_camping_outline {
  display: flex;
  position: relative;
  width: 24px;
  height: 24px;
}
.Main__Button {
  display: flex;
  position: relative;
  flex-grow: 0;
  align-self: auto;
  width: fit-content;
  height: fit-content;
}
.Main__Button1 {
  align-self: stretch;
  width: auto;
}
",
    "filePath": "Main.css",
  },
  {
    "content": "import { Button } from \\"./Button.js\\";
import \\"./Main.css\\";

export function Main(props) {
  return (
    <div {...props} className={\\"Main \\" + props.className}>
      <Header productName={\\"Title\\"} className=\\"Main__Header\\" />
      <div className=\\"Main__Frame_1\\">
        <div className=\\"Main__Hello__UIMix_\\">Hello, UIMix!</div>
        <div className=\\"Main__Lorem_ipsum_dolor_sit_amet__consectetur_adipiscing_elit__sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_\\">
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
          eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </div>
        <div className=\\"Main__Frame_2\\">
          <svg
            width={24}
            height={24}
            viewBox={\\"0 0 24 24\\"}
            fill={\\"none\\"}
            className=\\"Main__material_symbols_architecture\\"
          >
            <path
              d=\\"M6.75 21L6.5 18.8L9.35 10.95C9.6 11.1833 9.871 11.379 10.163 11.537C10.4543 11.6957 10.7667 11.8167 11.1 11.9L8.35 19.45L6.75 21ZM17.25 21L15.65 19.45L12.9 11.9C13.2333 11.8167 13.546 11.6957 13.838 11.537C14.1293 11.379 14.4 11.1833 14.65 10.95L17.5 18.8L17.25 21ZM12 11C11.1667 11 10.4583 10.7083 9.875 10.125C9.29167 9.54167 9 8.83333 9 8C9 7.35 9.18733 6.77067 9.562 6.262C9.93733 5.754 10.4167 5.4 11 5.2V3H13V5.2C13.5833 5.4 14.0627 5.754 14.438 6.262C14.8127 6.77067 15 7.35 15 8C15 8.83333 14.7083 9.54167 14.125 10.125C13.5417 10.7083 12.8333 11 12 11ZM12 9C12.2833 9 12.521 8.904 12.713 8.712C12.9043 8.52067 13 8.28333 13 8C13 7.71667 12.9043 7.479 12.713 7.287C12.521 7.09567 12.2833 7 12 7C11.7167 7 11.4793 7.09567 11.288 7.287C11.096 7.479 11 7.71667 11 8C11 8.28333 11.096 8.52067 11.288 8.712C11.4793 8.904 11.7167 9 12 9Z\\"
              fill=\\"black\\"
            />
          </svg>
          <svg
            width={24}
            height={24}
            viewBox={\\"0 0 24 24\\"}
            fill={\\"none\\"}
            className=\\"Main__material_symbols_avg_time_outline_rounded\\"
          >
            <path
              d=\\"M5.075 12H8C8.18333 12 8.35833 12.0457 8.525 12.137C8.69167 12.229 8.81667 12.3667 8.9 12.55L10 14.75L13.1 8.55C13.2833 8.16667 13.5833 7.975 14 7.975C14.4167 7.975 14.7167 8.16667 14.9 8.55L16.625 12H18.925C18.675 10.3 17.9 8.875 16.6 7.725C15.3 6.575 13.7667 6 12 6C10.2333 6 8.7 6.575 7.4 7.725C6.1 8.875 5.325 10.3 5.075 12ZM12 20C13.7667 20 15.3 19.425 16.6 18.275C17.9 17.125 18.675 15.7 18.925 14H16C15.8167 14 15.6417 13.9543 15.475 13.863C15.3083 13.771 15.1833 13.6333 15.1 13.45L14 11.25L10.9 17.45C10.7167 17.8333 10.4167 18.025 10 18.025C9.58333 18.025 9.28333 17.8333 9.1 17.45L7.375 14H5.075C5.325 15.7 6.1 17.125 7.4 18.275C8.7 19.425 10.2333 20 12 20ZM12 22C10.7667 22 9.604 21.7627 8.512 21.288C7.42067 20.8127 6.46667 20.1667 5.65 19.35C4.83333 18.5333 4.18733 17.5793 3.712 16.488C3.23733 15.396 3 14.2333 3 13H5C5 14.9333 5.68333 16.5833 7.05 17.95C8.41667 19.3167 10.0667 20 12 20C13.9333 20 15.5833 19.3167 16.95 17.95C18.3167 16.5833 19 14.9333 19 13H21C21 14.2333 20.7627 15.396 20.288 16.488C19.8127 17.5793 19.1667 18.5333 18.35 19.35C17.5333 20.1667 16.5793 20.8127 15.488 21.288C14.396 21.7627 13.2333 22 12 22ZM3 13C3 11.7667 3.23733 10.604 3.712 9.512C4.18733 8.42067 4.83333 7.46667 5.65 6.65C6.46667 5.83333 7.42067 5.18767 8.512 4.713C9.604 4.23767 10.7667 4 12 4C13.0333 4 14.025 4.16667 14.975 4.5C15.925 4.83333 16.8167 5.31667 17.65 5.95L18.35 5.25C18.5333 5.06667 18.7667 4.975 19.05 4.975C19.3333 4.975 19.5667 5.06667 19.75 5.25C19.9333 5.43333 20.025 5.66667 20.025 5.95C20.025 6.23333 19.9333 6.46667 19.75 6.65L19.05 7.35C19.6833 8.18333 20.1667 9.075 20.5 10.025C20.8333 10.975 21 11.9667 21 13H19C19 11.0667 18.3167 9.41667 16.95 8.05C15.5833 6.68333 13.9333 6 12 6C10.0667 6 8.41667 6.68333 7.05 8.05C5.68333 9.41667 5 11.0667 5 13H3ZM10 3C9.71667 3 9.47933 2.904 9.288 2.712C9.096 2.52067 9 2.28333 9 2C9 1.71667 9.096 1.479 9.288 1.287C9.47933 1.09567 9.71667 1 10 1H14C14.2833 1 14.521 1.09567 14.713 1.287C14.9043 1.479 15 1.71667 15 2C15 2.28333 14.9043 2.52067 14.713 2.712C14.521 2.904 14.2833 3 14 3H10ZM12 20C10.0667 20 8.41667 19.3167 7.05 17.95C5.68333 16.5833 5 14.9333 5 13C5 11.0667 5.68333 9.41667 7.05 8.05C8.41667 6.68333 10.0667 6 12 6C13.9333 6 15.5833 6.68333 16.95 8.05C18.3167 9.41667 19 11.0667 19 13C19 14.9333 18.3167 16.5833 16.95 17.95C15.5833 19.3167 13.9333 20 12 20Z\\"
              fill=\\"black\\"
            />
          </svg>
          <svg
            width={24}
            height={24}
            viewBox={\\"0 0 24 24\\"}
            fill={\\"none\\"}
            className=\\"Main__material_symbols_camping_outline\\"
          >
            <path
              d=\\"M2 22V17.35L10.75 5.55L9 3.2L10.6 2L12 3.875L13.4 2L15 3.2L13.25 5.55L22 17.35V22H2ZM12 7.225L4 18V20H7L12 13L17 20H20V18L12 7.225ZM9.45 20H14.55L12 16.45L9.45 20Z\\"
              fill=\\"black\\"
            />
          </svg>
        </div>
        <Button
          primary={true}
          size={\\"large\\"}
          label={\\"Press Me\\"}
          backgroundColor={\\"\\"}
          className=\\"Main__Button\\"
        />
        <Button showChevron={false} text={\\"OK\\"} className=\\"Main__Button1\\" />
      </div>
    </div>
  );
}
",
    "filePath": "Main.js",
  },
]
`;

exports[`Generator > should emit inline 1`] = `
[
  {
    "content": "export function Button(props) {
  return (
    <div
      {...props}
      style={{
        display: \\"flex\\",
        position: \\"relative\\",
        width: \\"fit-content\\",
        height: \\"fit-content\\",
        background: \\"#3b82f6\\",
        borderRadius: \\"4px 4px 4px 4px\\",
        overflow: \\"hidden\\",
        gap: \\"6px\\",
        padding: \\"6px 12px 6px 12px\\",
        alignItems: \\"center\\",
        justifyContent: \\"center\\",
        ...props.style,
      }}
    >
      <div
        style={{
          display: \\"flex\\",
          position: \\"relative\\",
          width: \\"fit-content\\",
          height: \\"fit-content\\",
          fontFamily: \\"Inter, sans-serif\\",
          fontSize: \\"12px\\",
          fontWeight: 500,
          color: \\"#ffffff\\",
          textAlign: \\"left\\",
          flexDirection: \\"column\\",
        }}
      >
        {props.text}
      </div>
      {props.showChevron && (
        <div
          style={{
            display: \\"flex\\",
            position: \\"relative\\",
            width: \\"8px\\",
            height: \\"8px\\",
            alignItems: \\"flex-start\\",
          }}
        >
          <svg
            width={5}
            height={7}
            viewBox={\\"0 0 5 7\\"}
            fill={\\"none\\"}
            style={{
              display: \\"flex\\",
              position: \\"absolute\\",
              left: \\"2.0833332538604736px\\",
              top: \\"0.6666666865348816px\\",
              width: \\"3.924999952316284px\\",
              height: \\"6.666666507720947px\\",
            }}
          >
            <path
              d=\\"M0.674995 6.83334L0.0833282 6.24167L2.825 3.5L0.0833282 0.758338L0.674995 0.166672L4.00833 3.5L0.674995 6.83334Z\\"
              fill=\\"white\\"
            />
          </svg>
        </div>
      )}
    </div>
  );
}
",
    "filePath": "Button.js",
  },
  {
    "content": "import { Button } from \\"./Button.js\\";

export function Form2(props) {
  return (
    <div
      {...props}
      style={{
        display: \\"flex\\",
        position: \\"relative\\",
        width: \\"fit-content\\",
        height: \\"fit-content\\",
        background: \\"#ffffff\\",
        overflow: \\"hidden\\",
        flexDirection: \\"column\\",
        gap: \\"13px\\",
        padding: \\"16px 16px 16px 16px\\",
        alignItems: \\"flex-start\\",
        ...props.style,
      }}
    >
      <div
        style={{
          display: \\"flex\\",
          position: \\"relative\\",
          width: \\"fit-content\\",
          height: \\"fit-content\\",
          fontFamily: \\"Inter, sans-serif\\",
          fontSize: \\"12px\\",
          fontWeight: 400,
          color: \\"#000000\\",
          textAlign: \\"left\\",
          flexDirection: \\"column\\",
        }}
      >
        Some Form (stretch)
      </div>
      <Button
        showChevron={false}
        text={\\"OK\\"}
        style={{ alignSelf: \\"stretch\\", width: \\"auto\\" }}
      />
    </div>
  );
}
",
    "filePath": "Form2.js",
  },
  {
    "content": "import { Button } from \\"./Button.js\\";

export function Form(props) {
  return (
    <div
      {...props}
      style={{
        display: \\"flex\\",
        position: \\"relative\\",
        width: \\"fit-content\\",
        height: \\"fit-content\\",
        background: \\"#ffffff\\",
        overflow: \\"hidden\\",
        flexDirection: \\"column\\",
        gap: \\"13px\\",
        padding: \\"16px 16px 16px 16px\\",
        alignItems: \\"flex-start\\",
        ...props.style,
      }}
    >
      <div
        style={{
          display: \\"flex\\",
          position: \\"relative\\",
          width: \\"fit-content\\",
          height: \\"fit-content\\",
          fontFamily: \\"Inter, sans-serif\\",
          fontSize: \\"12px\\",
          fontWeight: 400,
          color: \\"#000000\\",
          textAlign: \\"left\\",
          flexDirection: \\"column\\",
        }}
      >
        Some Form
      </div>
      <Button showChevron={true} text={\\"OK\\"} style={{}} />
    </div>
  );
}
",
    "filePath": "Form.js",
  },
  {
    "content": "import { Button } from \\"./Button.js\\";

export function Oldmain(props) {
  return (
    <div
      {...props}
      style={{
        display: \\"flex\\",
        position: \\"relative\\",
        width: \\"353px\\",
        height: \\"205px\\",
        background: \\"#ffffff\\",
        overflow: \\"hidden\\",
        flexDirection: \\"column\\",
        gap: \\"12px\\",
        padding: \\"16px 16px 16px 16px\\",
        alignItems: \\"flex-start\\",
        ...props.style,
      }}
    >
      <div
        style={{
          display: \\"flex\\",
          position: \\"relative\\",
          width: \\"fit-content\\",
          height: \\"fit-content\\",
          fontFamily: \\"Inter, sans-serif\\",
          fontSize: \\"16px\\",
          fontWeight: 700,
          lineHeight: \\"24px\\",
          color: \\"#000000\\",
          textAlign: \\"left\\",
          flexDirection: \\"column\\",
        }}
      >
        Hello, UIMix!
      </div>
      <div
        style={{
          display: \\"flex\\",
          position: \\"relative\\",
          alignSelf: \\"stretch\\",
          height: \\"fit-content\\",
          fontFamily: \\"Inter, sans-serif\\",
          fontSize: \\"16px\\",
          fontWeight: 400,
          lineHeight: \\"24px\\",
          color: \\"#000000\\",
          textAlign: \\"left\\",
          flexDirection: \\"column\\",
        }}
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
        tempor incididunt ut labore et dolore magna aliqua.
      </div>
      <Button
        showChevron={false}
        text={\\"OK\\"}
        style={{ alignSelf: \\"stretch\\", width: \\"auto\\" }}
      />
    </div>
  );
}
",
    "filePath": "Oldmain.js",
  },
  {
    "content": "import { Button } from \\"./Button.js\\";

export function Main(props) {
  return (
    <div
      {...props}
      style={{
        display: \\"flex\\",
        position: \\"relative\\",
        width: \\"480px\\",
        height: \\"fit-content\\",
        background: \\"#ffffff\\",
        overflow: \\"hidden\\",
        flexDirection: \\"column\\",
        alignItems: \\"flex-start\\",
        ...props.style,
      }}
    >
      <Header
        productName={\\"Title\\"}
        style={{
          display: \\"flex\\",
          position: \\"relative\\",
          flexGrow: 0,
          alignSelf: \\"stretch\\",
          width: \\"auto\\",
          height: \\"fit-content\\",
        }}
      />
      <div
        style={{
          display: \\"flex\\",
          position: \\"relative\\",
          alignSelf: \\"stretch\\",
          height: \\"fit-content\\",
          flexDirection: \\"column\\",
          gap: \\"24px\\",
          padding: \\"24px 24px 24px 24px\\",
          alignItems: \\"flex-start\\",
        }}
      >
        <div
          style={{
            display: \\"flex\\",
            position: \\"relative\\",
            alignSelf: \\"stretch\\",
            height: \\"fit-content\\",
            fontFamily: \\"Inter, sans-serif\\",
            fontSize: \\"16px\\",
            fontWeight: 700,
            lineHeight: \\"24px\\",
            color: \\"#000000\\",
            textAlign: \\"left\\",
            flexDirection: \\"column\\",
          }}
        >
          Hello, UIMix!
        </div>
        <div
          style={{
            display: \\"flex\\",
            position: \\"relative\\",
            alignSelf: \\"stretch\\",
            height: \\"fit-content\\",
            fontFamily: \\"Inter, sans-serif\\",
            fontSize: \\"16px\\",
            fontWeight: 400,
            lineHeight: \\"24px\\",
            color: \\"#000000\\",
            textAlign: \\"left\\",
            flexDirection: \\"column\\",
          }}
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
          eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </div>
        <div
          style={{
            display: \\"flex\\",
            position: \\"relative\\",
            width: \\"fit-content\\",
            height: \\"fit-content\\",
            gap: \\"12px\\",
            alignItems: \\"flex-start\\",
          }}
        >
          <svg
            width={24}
            height={24}
            viewBox={\\"0 0 24 24\\"}
            fill={\\"none\\"}
            style={{
              display: \\"flex\\",
              position: \\"relative\\",
              width: \\"24px\\",
              height: \\"24px\\",
            }}
          >
            <path
              d=\\"M6.75 21L6.5 18.8L9.35 10.95C9.6 11.1833 9.871 11.379 10.163 11.537C10.4543 11.6957 10.7667 11.8167 11.1 11.9L8.35 19.45L6.75 21ZM17.25 21L15.65 19.45L12.9 11.9C13.2333 11.8167 13.546 11.6957 13.838 11.537C14.1293 11.379 14.4 11.1833 14.65 10.95L17.5 18.8L17.25 21ZM12 11C11.1667 11 10.4583 10.7083 9.875 10.125C9.29167 9.54167 9 8.83333 9 8C9 7.35 9.18733 6.77067 9.562 6.262C9.93733 5.754 10.4167 5.4 11 5.2V3H13V5.2C13.5833 5.4 14.0627 5.754 14.438 6.262C14.8127 6.77067 15 7.35 15 8C15 8.83333 14.7083 9.54167 14.125 10.125C13.5417 10.7083 12.8333 11 12 11ZM12 9C12.2833 9 12.521 8.904 12.713 8.712C12.9043 8.52067 13 8.28333 13 8C13 7.71667 12.9043 7.479 12.713 7.287C12.521 7.09567 12.2833 7 12 7C11.7167 7 11.4793 7.09567 11.288 7.287C11.096 7.479 11 7.71667 11 8C11 8.28333 11.096 8.52067 11.288 8.712C11.4793 8.904 11.7167 9 12 9Z\\"
              fill=\\"black\\"
            />
          </svg>
          <svg
            width={24}
            height={24}
            viewBox={\\"0 0 24 24\\"}
            fill={\\"none\\"}
            style={{
              display: \\"flex\\",
              position: \\"relative\\",
              width: \\"24px\\",
              height: \\"24px\\",
            }}
          >
            <path
              d=\\"M5.075 12H8C8.18333 12 8.35833 12.0457 8.525 12.137C8.69167 12.229 8.81667 12.3667 8.9 12.55L10 14.75L13.1 8.55C13.2833 8.16667 13.5833 7.975 14 7.975C14.4167 7.975 14.7167 8.16667 14.9 8.55L16.625 12H18.925C18.675 10.3 17.9 8.875 16.6 7.725C15.3 6.575 13.7667 6 12 6C10.2333 6 8.7 6.575 7.4 7.725C6.1 8.875 5.325 10.3 5.075 12ZM12 20C13.7667 20 15.3 19.425 16.6 18.275C17.9 17.125 18.675 15.7 18.925 14H16C15.8167 14 15.6417 13.9543 15.475 13.863C15.3083 13.771 15.1833 13.6333 15.1 13.45L14 11.25L10.9 17.45C10.7167 17.8333 10.4167 18.025 10 18.025C9.58333 18.025 9.28333 17.8333 9.1 17.45L7.375 14H5.075C5.325 15.7 6.1 17.125 7.4 18.275C8.7 19.425 10.2333 20 12 20ZM12 22C10.7667 22 9.604 21.7627 8.512 21.288C7.42067 20.8127 6.46667 20.1667 5.65 19.35C4.83333 18.5333 4.18733 17.5793 3.712 16.488C3.23733 15.396 3 14.2333 3 13H5C5 14.9333 5.68333 16.5833 7.05 17.95C8.41667 19.3167 10.0667 20 12 20C13.9333 20 15.5833 19.3167 16.95 17.95C18.3167 16.5833 19 14.9333 19 13H21C21 14.2333 20.7627 15.396 20.288 16.488C19.8127 17.5793 19.1667 18.5333 18.35 19.35C17.5333 20.1667 16.5793 20.8127 15.488 21.288C14.396 21.7627 13.2333 22 12 22ZM3 13C3 11.7667 3.23733 10.604 3.712 9.512C4.18733 8.42067 4.83333 7.46667 5.65 6.65C6.46667 5.83333 7.42067 5.18767 8.512 4.713C9.604 4.23767 10.7667 4 12 4C13.0333 4 14.025 4.16667 14.975 4.5C15.925 4.83333 16.8167 5.31667 17.65 5.95L18.35 5.25C18.5333 5.06667 18.7667 4.975 19.05 4.975C19.3333 4.975 19.5667 5.06667 19.75 5.25C19.9333 5.43333 20.025 5.66667 20.025 5.95C20.025 6.23333 19.9333 6.46667 19.75 6.65L19.05 7.35C19.6833 8.18333 20.1667 9.075 20.5 10.025C20.8333 10.975 21 11.9667 21 13H19C19 11.0667 18.3167 9.41667 16.95 8.05C15.5833 6.68333 13.9333 6 12 6C10.0667 6 8.41667 6.68333 7.05 8.05C5.68333 9.41667 5 11.0667 5 13H3ZM10 3C9.71667 3 9.47933 2.904 9.288 2.712C9.096 2.52067 9 2.28333 9 2C9 1.71667 9.096 1.479 9.288 1.287C9.47933 1.09567 9.71667 1 10 1H14C14.2833 1 14.521 1.09567 14.713 1.287C14.9043 1.479 15 1.71667 15 2C15 2.28333 14.9043 2.52067 14.713 2.712C14.521 2.904 14.2833 3 14 3H10ZM12 20C10.0667 20 8.41667 19.3167 7.05 17.95C5.68333 16.5833 5 14.9333 5 13C5 11.0667 5.68333 9.41667 7.05 8.05C8.41667 6.68333 10.0667 6 12 6C13.9333 6 15.5833 6.68333 16.95 8.05C18.3167 9.41667 19 11.0667 19 13C19 14.9333 18.3167 16.5833 16.95 17.95C15.5833 19.3167 13.9333 20 12 20Z\\"
              fill=\\"black\\"
            />
          </svg>
          <svg
            width={24}
            height={24}
            viewBox={\\"0 0 24 24\\"}
            fill={\\"none\\"}
            style={{
              display: \\"flex\\",
              position: \\"relative\\",
              width: \\"24px\\",
              height: \\"24px\\",
            }}
          >
            <path
              d=\\"M2 22V17.35L10.75 5.55L9 3.2L10.6 2L12 3.875L13.4 2L15 3.2L13.25 5.55L22 17.35V22H2ZM12 7.225L4 18V20H7L12 13L17 20H20V18L12 7.225ZM9.45 20H14.55L12 16.45L9.45 20Z\\"
              fill=\\"black\\"
            />
          </svg>
        </div>
        <Button
          primary={true}
          size={\\"large\\"}
          label={\\"Press Me\\"}
          backgroundColor={\\"\\"}
          style={{
            display: \\"flex\\",
            position: \\"relative\\",
            flexGrow: 0,
            alignSelf: \\"auto\\",
            width: \\"fit-content\\",
            height: \\"fit-content\\",
          }}
        />
        <Button
          showChevron={false}
          text={\\"OK\\"}
          style={{ alignSelf: \\"stretch\\", width: \\"auto\\" }}
        />
      </div>
    </div>
  );
}
",
    "filePath": "Main.js",
  },
]
`;

exports[`Generator > should emit tailwind 1`] = `
[
  {
    "content": "import { twMerge } from \\"tailwind-merge\\";

export function Button(props) {
  return (
    <div
      {...props}
      className={twMerge(
        \\"flex relative w-fit bg-blue-500 rounded-tl rounded-tr rounded-br rounded-bl overflow-hidden gap-1.5 pt-1.5 pr-3 pb-1.5 pl-3 items-center justify-center\\",
        props.className
      )}
    >
      <div className=\\"w-fit font-['Inter',sans-serif] font-medium text-xs text-white\\">
        {props.text}
      </div>
      {props.showChevron && (
        <div className=\\"flex relative w-2 h-2 items-start\\">
          <svg
            width={5}
            height={7}
            viewBox={\\"0 0 5 7\\"}
            fill={\\"none\\"}
            className=\\"absolute left-[0.1302083283662796rem] top-[0.0416666679084301rem] w-[0.24531249701976776rem] h-[0.4166666567325592rem]\\"
          >
            <path
              d=\\"M0.674995 6.83334L0.0833282 6.24167L2.825 3.5L0.0833282 0.758338L0.674995 0.166672L4.00833 3.5L0.674995 6.83334Z\\"
              fill=\\"white\\"
            />
          </svg>
        </div>
      )}
    </div>
  );
}
",
    "filePath": "Button.js",
  },
  {
    "content": "import { Button } from \\"./Button.js\\";
import { twMerge } from \\"tailwind-merge\\";

export function Form2(props) {
  return (
    <div
      {...props}
      className={twMerge(
        \\"flex relative w-fit bg-white overflow-hidden flex-col gap-[0.8125rem] pt-4 pr-4 pb-4 pl-4 items-start\\",
        props.className
      )}
    >
      <div className=\\"w-fit font-['Inter',sans-serif] text-xs text-black\\">
        Some Form (stretch)
      </div>
      <Button showChevron={false} text={\\"OK\\"} className=\\"self-stretch w-auto\\" />
    </div>
  );
}
",
    "filePath": "Form2.js",
  },
  {
    "content": "import { Button } from \\"./Button.js\\";
import { twMerge } from \\"tailwind-merge\\";

export function Form(props) {
  return (
    <div
      {...props}
      className={twMerge(
        \\"flex relative w-fit bg-white overflow-hidden flex-col gap-[0.8125rem] pt-4 pr-4 pb-4 pl-4 items-start\\",
        props.className
      )}
    >
      <div className=\\"w-fit font-['Inter',sans-serif] text-xs text-black\\">
        Some Form
      </div>
      <Button showChevron={true} text={\\"OK\\"} className=\\"\\" />
    </div>
  );
}
",
    "filePath": "Form.js",
  },
  {
    "content": "import { Button } from \\"./Button.js\\";
import { twMerge } from \\"tailwind-merge\\";

export function Oldmain(props) {
  return (
    <div
      {...props}
      className={twMerge(
        \\"flex relative w-[22.0625rem] h-[12.8125rem] bg-white overflow-hidden flex-col gap-3 pt-4 pr-4 pb-4 pl-4 items-start\\",
        props.className
      )}
    >
      <div className=\\"w-fit font-['Inter',sans-serif] font-bold text-base leading-6 text-black\\">
        Hello, UIMix!
      </div>
      <div className=\\"self-stretch font-['Inter',sans-serif] text-base leading-6 text-black\\">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
        tempor incididunt ut labore et dolore magna aliqua.
      </div>
      <Button showChevron={false} text={\\"OK\\"} className=\\"self-stretch w-auto\\" />
    </div>
  );
}
",
    "filePath": "Oldmain.js",
  },
  {
    "content": "import { Button } from \\"./Button.js\\";
import { twMerge } from \\"tailwind-merge\\";

export function Main(props) {
  return (
    <div
      {...props}
      className={twMerge(
        \\"flex relative w-[30rem] bg-white overflow-hidden flex-col items-start\\",
        props.className
      )}
    >
      <Header
        productName={\\"Title\\"}
        className=\\"flex relative flex-none self-stretch w-auto h-fit\\"
      />
      <div className=\\"flex relative self-stretch flex-col gap-6 pt-6 pr-6 pb-6 pl-6 items-start\\">
        <div className=\\"self-stretch font-['Inter',sans-serif] font-bold text-base leading-6 text-black\\">
          Hello, UIMix!
        </div>
        <div className=\\"self-stretch font-['Inter',sans-serif] text-base leading-6 text-black\\">
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
          eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </div>
        <div className=\\"flex relative w-fit gap-3 items-start\\">
          <svg
            width={24}
            height={24}
            viewBox={\\"0 0 24 24\\"}
            fill={\\"none\\"}
            className=\\"w-6 h-6\\"
          >
            <path
              d=\\"M6.75 21L6.5 18.8L9.35 10.95C9.6 11.1833 9.871 11.379 10.163 11.537C10.4543 11.6957 10.7667 11.8167 11.1 11.9L8.35 19.45L6.75 21ZM17.25 21L15.65 19.45L12.9 11.9C13.2333 11.8167 13.546 11.6957 13.838 11.537C14.1293 11.379 14.4 11.1833 14.65 10.95L17.5 18.8L17.25 21ZM12 11C11.1667 11 10.4583 10.7083 9.875 10.125C9.29167 9.54167 9 8.83333 9 8C9 7.35 9.18733 6.77067 9.562 6.262C9.93733 5.754 10.4167 5.4 11 5.2V3H13V5.2C13.5833 5.4 14.0627 5.754 14.438 6.262C14.8127 6.77067 15 7.35 15 8C15 8.83333 14.7083 9.54167 14.125 10.125C13.5417 10.7083 12.8333 11 12 11ZM12 9C12.2833 9 12.521 8.904 12.713 8.712C12.9043 8.52067 13 8.28333 13 8C13 7.71667 12.9043 7.479 12.713 7.287C12.521 7.09567 12.2833 7 12 7C11.7167 7 11.4793 7.09567 11.288 7.287C11.096 7.479 11 7.71667 11 8C11 8.28333 11.096 8.52067 11.288 8.712C11.4793 8.904 11.7167 9 12 9Z\\"
              fill=\\"black\\"
            />
          </svg>
          <svg
            width={24}
            height={24}
            viewBox={\\"0 0 24 24\\"}
            fill={\\"none\\"}
            className=\\"w-6 h-6\\"
          >
            <path
              d=\\"M5.075 12H8C8.18333 12 8.35833 12.0457 8.525 12.137C8.69167 12.229 8.81667 12.3667 8.9 12.55L10 14.75L13.1 8.55C13.2833 8.16667 13.5833 7.975 14 7.975C14.4167 7.975 14.7167 8.16667 14.9 8.55L16.625 12H18.925C18.675 10.3 17.9 8.875 16.6 7.725C15.3 6.575 13.7667 6 12 6C10.2333 6 8.7 6.575 7.4 7.725C6.1 8.875 5.325 10.3 5.075 12ZM12 20C13.7667 20 15.3 19.425 16.6 18.275C17.9 17.125 18.675 15.7 18.925 14H16C15.8167 14 15.6417 13.9543 15.475 13.863C15.3083 13.771 15.1833 13.6333 15.1 13.45L14 11.25L10.9 17.45C10.7167 17.8333 10.4167 18.025 10 18.025C9.58333 18.025 9.28333 17.8333 9.1 17.45L7.375 14H5.075C5.325 15.7 6.1 17.125 7.4 18.275C8.7 19.425 10.2333 20 12 20ZM12 22C10.7667 22 9.604 21.7627 8.512 21.288C7.42067 20.8127 6.46667 20.1667 5.65 19.35C4.83333 18.5333 4.18733 17.5793 3.712 16.488C3.23733 15.396 3 14.2333 3 13H5C5 14.9333 5.68333 16.5833 7.05 17.95C8.41667 19.3167 10.0667 20 12 20C13.9333 20 15.5833 19.3167 16.95 17.95C18.3167 16.5833 19 14.9333 19 13H21C21 14.2333 20.7627 15.396 20.288 16.488C19.8127 17.5793 19.1667 18.5333 18.35 19.35C17.5333 20.1667 16.5793 20.8127 15.488 21.288C14.396 21.7627 13.2333 22 12 22ZM3 13C3 11.7667 3.23733 10.604 3.712 9.512C4.18733 8.42067 4.83333 7.46667 5.65 6.65C6.46667 5.83333 7.42067 5.18767 8.512 4.713C9.604 4.23767 10.7667 4 12 4C13.0333 4 14.025 4.16667 14.975 4.5C15.925 4.83333 16.8167 5.31667 17.65 5.95L18.35 5.25C18.5333 5.06667 18.7667 4.975 19.05 4.975C19.3333 4.975 19.5667 5.06667 19.75 5.25C19.9333 5.43333 20.025 5.66667 20.025 5.95C20.025 6.23333 19.9333 6.46667 19.75 6.65L19.05 7.35C19.6833 8.18333 20.1667 9.075 20.5 10.025C20.8333 10.975 21 11.9667 21 13H19C19 11.0667 18.3167 9.41667 16.95 8.05C15.5833 6.68333 13.9333 6 12 6C10.0667 6 8.41667 6.68333 7.05 8.05C5.68333 9.41667 5 11.0667 5 13H3ZM10 3C9.71667 3 9.47933 2.904 9.288 2.712C9.096 2.52067 9 2.28333 9 2C9 1.71667 9.096 1.479 9.288 1.287C9.47933 1.09567 9.71667 1 10 1H14C14.2833 1 14.521 1.09567 14.713 1.287C14.9043 1.479 15 1.71667 15 2C15 2.28333 14.9043 2.52067 14.713 2.712C14.521 2.904 14.2833 3 14 3H10ZM12 20C10.0667 20 8.41667 19.3167 7.05 17.95C5.68333 16.5833 5 14.9333 5 13C5 11.0667 5.68333 9.41667 7.05 8.05C8.41667 6.68333 10.0667 6 12 6C13.9333 6 15.5833 6.68333 16.95 8.05C18.3167 9.41667 19 11.0667 19 13C19 14.9333 18.3167 16.5833 16.95 17.95C15.5833 19.3167 13.9333 20 12 20Z\\"
              fill=\\"black\\"
            />
          </svg>
          <svg
            width={24}
            height={24}
            viewBox={\\"0 0 24 24\\"}
            fill={\\"none\\"}
            className=\\"w-6 h-6\\"
          >
            <path
              d=\\"M2 22V17.35L10.75 5.55L9 3.2L10.6 2L12 3.875L13.4 2L15 3.2L13.25 5.55L22 17.35V22H2ZM12 7.225L4 18V20H7L12 13L17 20H20V18L12 7.225ZM9.45 20H14.55L12 16.45L9.45 20Z\\"
              fill=\\"black\\"
            />
          </svg>
        </div>
        <Button
          primary={true}
          size={\\"large\\"}
          label={\\"Press Me\\"}
          backgroundColor={\\"\\"}
          className=\\"flex relative flex-none self-auto w-fit h-fit\\"
        />
        <Button
          showChevron={false}
          text={\\"OK\\"}
          className=\\"self-stretch w-auto\\"
        />
      </div>
    </div>
  );
}
",
    "filePath": "Main.js",
  },
]
`;
